--- a/src/components/Topbar/Topbar.module.css
+++ b/src/components/Topbar/Topbar.module.css
@@ -58,6 +58,8 @@
   padding: .2rem .2rem;
 }
 
+
+
 .topbar__search::placeholder {
   color: #fff;
   font-size: 16px;
@@ -72,6 +74,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.closeContainer{
+  display: none;
 }
 @media only screen and (max-width: 600px){
   .topbar{
